Add support for experimental code mod launching